--- a/optimset.bib
+++ b/optimset.bib
@@ -1,4 +1,4 @@
-%% Makefile
+%% optimset.bib
 %% Copyright 2023 Tom M. Ragonneau and Zaikun Zhang
 @article{Audet_Dennis_2006,
     title        = {Mesh adaptive direct search algorithms for constrained optimization},
