--- a/optimset.tex
+++ b/optimset.tex
@@ -1,4 +1,4 @@
-%% Makefile
+%% optimset.tex
 %% Copyright 2023 Tom M. Ragonneau and Zaikun Zhang
 \documentclass{article}
 \usepackage[utf8]{inputenc}
@@ -44,7 +44,7 @@
 \newcommand*{\linkedin}[1]{\textcolor{LinkedInBlue}{\faIcon{linkedin}} \href{https://www.linkedin.com/in/#1/}{#1}}
 \newcommand*{\orcid}[1]{\texorpdfstring{\hspace{1.5ex}\href{https://orcid.org/#1}{\textcolor{ORCIDGreen}{\faIcon{orcid}}}}{}}
 \newcommand*{\phone}[2][phone]{\faIcon{#1} \href{tel:#2}{#2}}
-\newcommand*{\twitter}[1]{\textcolor{TwitterBlue}{\faIcon{twitter}} \href{https://twitter.com/#1/}{#1}}
+\newcommand*{\twitter}[1]{\textcolor{TwitterBlue}{\faIcon{twitter}} \href{https://twitter.com/#1/}{@#1}}
 \newcommand*{\website}[2][globe]{\faIcon{#1} \href{https://#2/}{#2}}
 
 % Glossaries
@@ -170,7 +170,7 @@
     }\orcid{0000-0003-2717-2876} \and
     Zaikun Zhang\thanks{
         Department of Applied Mathematics, The Hong Kong Polytechnic University, Hong Kong\\
-        \email{zaikun.zhang@polyu.edu.hk} \quad \website[globe-asia]{www.zhangzk.net}\\
+        \email{zaikun.zhang@polyu.edu.hk} \quad \website[globe-asia]{www.zhangzk.net} \quad \twitter{zaikunzhang}\\
         Corresponding author
     }\orcid{0000-0001-8934-8190}
 }
