Meeting with Zaikun

--- a/optimset.bib
+++ b/optimset.bib
@@ -17,6 +17,24 @@
     series       = {Springer Ser. Oper. Res. Financ. Eng.},
 }
 
+@article{Bandeira_Scheinberg_Vicente_2012,
+    title        = {Computation of sparse low degree interpolating polynomials and their application to derivative-free optimization},
+    author       = {Bandeira, A. S. and Scheinberg, K. and Vicente, L. N.},
+    year         = 2012,
+    journal      = {Math. Program.},
+    volume       = 134,
+    pages        = {223--257},
+}
+
+@article{Berahas_Byrd_Nocedal_2019,
+    title        = {Derivative-free optimization of noisy functions via quasi-{Newton} methods},
+    author       = {Berahas, A. S. and Byrd, R. H. and Nocedal, J.},
+    year         = 2019,
+    journal      = {SIAM J. Optim.},
+    volume       = 29,
+    pages        = {965--993},
+}
+
 @article{Booker_Etal_1999,
     title        = {A rigorous framework for optimization of expensive functions by surrogates},
     author       = {Booker, A. J. and Dennis, Jr., J. E. and Frank, P. D. and Serafini, D. B. and Torczon, V. and Trosset, M. W.},
@@ -32,6 +50,15 @@
     year         = 2000,
     publisher    = {SIAM},
     series       = {MPS-SIAM Ser. Optim.},
+}
+
+@inproceedings{Conn_Scheinberg_Toint_1998,
+    title        = {A derivative free optimization algorithm in practice},
+    author       = {Conn, A. R. and Scheinberg, K. and Toint, Ph. L.},
+    year         = 1998,
+    booktitle    = {Proceedings of the 7th AIAA/USAF/NASA/ISSMO Symposium on Multidisciplinary Analysis and Optimization},
+    publisher    = {AIAA},
+    pages        = {129--139},
 }
 
 @book{Conn_Scheinberg_Vicente_2009,
@@ -50,6 +77,16 @@
     publisher    = {Springer},
     pages        = {27--47},
     editor       = {{Di Pillo}, G. and Giannessi, F.},
+}
+
+@inproceedings{Custodio_Scheinberg_Vicente_2017,
+    title        = {Methodologies and software for derivative-free optimization},
+    author       = {Cust{\'{o}}dio, A. L. and Scheinberg, K. and Vicente, L. N.},
+    year         = 2017,
+    booktitle    = {Advances and Trends in Optimization with Engineering Applications},
+    publisher    = {SIAM},
+    pages        = {495--506},
+    editor       = {Terlaky, T. and Anjos, M. F. and Ahmed, S.},
 }
 
 @article{Dennis_Schnabel_1979,
@@ -82,7 +119,7 @@
     author       = {Ghanbari, H. and Scheinberg, K.},
     year         = 2017,
     number       = {17T-005},
-    institution  = {COR@L},
+    institution  = {COR\@L},
 }
 
 @article{Hooke_Jeeves_1961,
@@ -103,6 +140,15 @@
     pages        = {385--482},
 }
 
+@article{Larson_Menickelly_Wild_2019,
+    title        = {Derivative-free optimization methods},
+    author       = {Larson, J. and Menickelly, M. and Wild, S. M.},
+    year         = 2019,
+    journal      = {Acta Numer.},
+    volume       = 28,
+    pages        = {287--404},
+}
+
 @article{Nelder_Mead_1965,
     title        = {A simplex method for function minimization},
     author       = {Nelder, J. A. and Mead, R.},
@@ -110,6 +156,15 @@
     journal      = {Comput. J.},
     volume       = 7,
     pages        = {308--313},
+}
+
+@book{Nocedal_Wright_2006,
+    title        = {Numerical Optimization},
+    author       = {Nocedal, J. and Wright, S. J.},
+    year         = 2006,
+    publisher    = {Springer},
+    series       = {Springer Ser. Oper. Res. Financ. Eng.},
+    edition      = {Second},
 }
 
 @article{Porcelli_Toint_2017,
@@ -130,6 +185,15 @@
     pages        = {1--25},
 }
 
+@article{Powell_1975,
+    title        = {A view of unconstrained minimization algorithms that do not require derivatives},
+    author       = {Powell, M. J. D.},
+    year         = 1975,
+    journal      = {ACM Trans. Math. Software},
+    volume       = 1,
+    pages        = {97--107},
+}
+
 @inproceedings{Powell_1994,
     title        = {A direct search optimization method that models the objective and constraint functions by linear interpolation},
     author       = {Powell, M. J. D.},
@@ -141,6 +205,15 @@
     editor       = {Gomez, S. and Hennart, J. P.},
 }
 
+@article{Powell_1998,
+    title        = {Direct search algorithms for optimization calculations},
+    author       = {Powell, M. J. D.},
+    year         = 1998,
+    journal      = {Acta Numer.},
+    volume       = 7,
+    pages        = {287--336},
+}
+
 @article{Powell_2002,
     title        = {{UOBYQA}: unconstrained optimization by quadratic approximation},
     author       = {Powell, M. J. D.},
@@ -148,6 +221,25 @@
     journal      = {Math. Program.},
     volume       = 92,
     pages        = {555--582},
+}
+
+@article{Powell_2004a,
+    title        = {Least Frobenius norm updating of quadratic models that satisfy interpolation conditions},
+    author       = {Powell, M. J. D.},
+    year         = 2004,
+    journal      = {Math. Program.},
+    volume       = 100,
+    pages        = {183--215},
+}
+
+@inproceedings{Powell_2004b,
+    title        = {On updating the inverse of a {KKT} matrix},
+    author       = {Powell, M. J. D.},
+    year         = 2004,
+    booktitle    = {Numerical Linear Algebra and Optimization},
+    publisher    = {Science Press},
+    pages        = {56--78},
+    editor       = {Yuan, Y.},
 }
 
 @inproceedings{Powell_2006,
@@ -195,11 +287,27 @@
     school       = {Department of Applied Mathematics, The Hong Kong Polytechnic University},
 }
 
+@misc{Ragonneau_Zhang_2021,
+    title        = {{PDFO: Cross-Platform Interfaces for Powell's Derivative-Free Optimization Solvers}},
+    author       = {Ragonneau, T. M. and Zhang, Z.},
+    year         = 2021,
+    howpublished = {\url{https://www.pdfo.net/}},
+}
+
 @misc{Ragonneau_Zhang_2023,
     title        = {{COBYQA --- Constrained Optimization BY Quadratic Approximations}},
     author       = {Ragonneau, T. M. and Zhang, Z.},
     year         = 2023,
     howpublished = {\url{https://www.cobyqa.com/}},
+}
+
+@article{Rios_Sahinidis_2013,
+    title        = {Derivative-free optimization: a review of algorithms and comparison of software implementations},
+    author       = {Rios, L. M. and Sahinidis, N. V.},
+    year         = 2013,
+    journal      = {J. Global Optim.},
+    volume       = 56,
+    pages        = {1247--1293},
 }
 
 @inproceedings{Wild_2008,
@@ -209,9 +317,25 @@
     booktitle    = {The Tenth Copper Mountain Conference on Iterative Methods},
 }
 
+@misc{Xie_Yuan_2022,
+    title        = {Least {$H^2$} norm updating quadratic interpolation model function for derivative-free trust-region algorithms},
+    author       = {Xie, P. and Yuan, Y.},
+    year         = 2022,
+    howpublished = {Distinguished lecture for the PolyU 85\textsuperscript{th} and AMA 50\textsuperscript{th} Anniversary presented at the Department of Applied Mathematics, The Hong Kong Polytechnic University},
+}
+
 @phdthesis{Zhang_2012,
     title        = {On Derivative-Free Optimization Methods \textnormal{(in Chinese)}},
     author       = {Zhang, Z.},
     year         = 2012,
     school       = {Chinese Academy of Sciences},
+}
+
+@article{Zhang_2014,
+    title        = {Sobolev seminorm of quadratic functions with applications to derivative-free optimization},
+    author       = {Zhang, Z.},
+    year         = 2014,
+    journal      = {Math. Program.},
+    volume       = 146,
+    pages        = {77--96},
 }
